Use react-bootstrap to apply grid and styling to views

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,31 @@ $color: steelblue;
   color: $color;
 }
 
+html, body {
+  height: 100vh;
+}
+
+.registration-view {
+  height: 100vh;
+}
+
+.login-view {
+  height: 100vh;
+}
+
+.movie-card {
+  cursor: pointer;
+}
+
+.movie-card:hover {
+  opacity: 0.8;
+}
+
+// styling for movie-view components
+.movie-title {
+  font-size: 50px;
+}
+
 .main-view {
   text-align: center;
 }
